--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<html>
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Tomaz Turner" />
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-  <canvas id="container" width="1500" height="800"></canvas>
+  <canvas id="container" width="400" height="400"></canvas>
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/easeljs-0.8.2.min.js"></script>
   <script src="js/main.js"></script>
