object oriented everything, added varius modes

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width">
   <title></title>
   <link rel="stylesheet" href="style/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
   <canvas class="containers" id="container0" width="800" height="800"></canvas>
+  <div class="data-entry" id="data-entry">
+  </div>
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/easeljs-0.8.2.min.js"></script>
   <script src="js/main.js"></script>
